마이페이지 - 각 페이지 이동 및 틀 구현

--- a/camp/src/main/webapp/resources/css/mypage.css
+++ b/camp/src/main/webapp/resources/css/mypage.css
@@ -1,8 +1,8 @@
 /* 마이페이지 영역 */
 .myPage-content{
-    width: 1000px;
+    width: 1140px;
     height: 800px;
-    margin: 25px auto;
+    margin: 25px;
 
     display: flex;
 }
