--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -26,6 +26,12 @@ header>section:nth-of-type(3) {
 /* 로고 */
 header>section:nth-of-type(1) {
     display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.title {
+    text-align: center;
 }
 
 #home-logo {
@@ -50,6 +56,11 @@ header .menu > li {
     width: 150px;
 	height: 60px;
     text-align: center;
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
 
 .submenu{
