마이페이지 - 회원 정보 수정, 비밀번호 변경, 회원 탈퇴 틀 제작

--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -3,6 +3,7 @@
 }
 
 body {
+    height: auto;
     margin: 0;
 }
 
@@ -88,6 +89,7 @@ header .conent1 {
 
 main {
     width: 1140px;
+    height: auto;
     margin: auto;
 }
 
