상세페이지 +이미지ajax추가

--- a/camp/src/main/webapp/resources/css/detailList.css
+++ b/camp/src/main/webapp/resources/css/detailList.css
@@ -1,4 +1,9 @@
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
+}
 
 
 body {
@@ -10,7 +15,7 @@ body {
     justify-content: center; */
 }
 
-.div1 {
+.kakaoMap {
     border: 2px solid rgb(3, 92, 18);
     margin-top: 10px;
     height: 500px;
@@ -25,8 +30,30 @@ body {
 
 .div3 {
     border: 2px solid rgb(3, 92, 18);
-    height:600px;
+    height: 600px;
     margin-top: 50px;
+}
+
+.div4 {
+    border: 2px solid rgb(3, 92, 18);
+    height: auto;
+    display: flex;
+    margin-top: 50px;
+}
+.div5 {
+    border: 2px solid rgb(3, 92, 18);
+    margin-top: 60px;
+    height: 50px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding: auto;
+}
+.div6 {
+    border: 2px solid rgb(3, 92, 18);
+    height: 300px;
+    display: flex;
 }
 
 
@@ -61,7 +88,7 @@ body {
     height: 100%;
 
 } */
-.camp_info_box caption{
+.camp_info_box caption {
     height: 50px;
     margin-top: 25px;
 }
@@ -148,6 +175,7 @@ body {
 
 
 ul.table_ul05 {
+
     position: relative;
     margin: 0;
 }
@@ -204,3 +232,37 @@ ul.table_ul05 li:first-child {
 .table_w .table_t4 tr:last-child td {
     border-bottom: 0;
 }
+
+
+
+
+
+
+/* 이미지리스트 출력 */
+.box_photo {
+    max-width: 100%;
+    min-width: 150px;
+    height: auto;
+    width: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.box_photo3 {
+
+    background-color: rgb(240, 240, 240);
+    width: 226px;
+    height: 220px;
+    margin: 0px;
+    padding: 3px;
+    left: 4px;
+    top: 0px;
+    pointer-events: auto;
+   
+}
+/* 이미지 사이즈 */
+.imageSize{
+    width: 226px;
+    height: 220px;
+}
+
