--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -5,6 +5,8 @@
 body {
     height: auto;
     margin: 0;
+   /*  background-image: url('../images/tentTest.jpg'); */
+  /*   background-size: 100% 100%; */
 }
 
 header {
@@ -86,7 +88,7 @@ header .mainImg {
     height: auto;
 }
 
-header .conent1 {
+header .content1 {
     width: 100%;
 }
 
@@ -96,12 +98,92 @@ header .conent1 {
 
 
 main {
-    width: 1140px;
+    width: 1400px;
 
     height: auto;
 
     margin: auto;
 }
+
+.ranBoard>div:nth-of-type(1) {
+    height: 60%;
+}
+.ranBoard>div:nth-of-type(2) {
+    height: 40%;
+}
+
+.content3{
+    width : 100%;
+    height: 700px;
+    border: 1px solid red;
+    display: flex;
+    
+}
+.ranBoard{
+    flex:1;
+    border: 1px solid blue;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+}
+.ranBoard_1{
+    border: 1px solid green;
+    
+
+}
+
+#ranBoardImg1{
+    width: 100%;
+    height: 100%;
+
+}
+#ranBoardImg2{
+    width: 100%;
+    height: 100%;
+
+}
+#ranBoardImg3{
+    width: 100%;
+    height: 100%;
+}
+
+
+
+.cont_tb1 {
+    position: relative;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    clear: both;
+}
+
+.cont_tb1 table {
+    width: 100%;
+    font-size: 14px;
+}
+
+.cont_tb1 tbody tr:nth-child(1) th {
+    border-top: 2px solid black;
+}
+
+.cont_tb1 tbody tr:nth-child(1) td {
+    border-top: 2px solid green;
+}
+
+.cont_tb1 table tr th {
+    padding: 11px 10px;
+    border-bottom: 1px solid #c8c8c8;
+    text-align: left;
+    color: #000;
+    line-height: 25px;
+}
+
+.cont_tb1 table tr td {
+    padding: 11px 10px;
+    border-bottom: 1px solid #c8c8c8;
+    line-height: 25px;
+}
+
 
 
 
