--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -105,49 +105,6 @@ main {
     margin: auto;
 }
 
-.ranBoard>div:nth-of-type(1) {
-    height: 60%;
-}
-.ranBoard>div:nth-of-type(2) {
-    height: 40%;
-}
-
-.content3{
-    width : 100%;
-    height: 700px;
-    border: 1px solid red;
-    display: flex;
-    
-}
-.ranBoard{
-    flex:1;
-    border: 1px solid blue;
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
-}
-.ranBoard_1{
-    border: 1px solid green;
-    
-
-}
-
-#ranBoardImg1{
-    width: 100%;
-    height: 100%;
-
-}
-#ranBoardImg2{
-    width: 100%;
-    height: 100%;
-
-}
-#ranBoardImg3{
-    width: 100%;
-    height: 100%;
-}
-
-
 
 .cont_tb1 {
     position: relative;
@@ -222,3 +179,76 @@ footer span {
 .searchOption {
     display: none;
 }
+
+
+
+
+
+.ranBoard>div:nth-of-type(1) {
+    height: 60%;
+}
+.ranBoard>div:nth-of-type(2) {
+    height: 40%;
+}
+
+.content3{
+    width : 100%;
+    height: 700px;
+    border: 1px solid red;
+    display: flex;
+    
+}
+.ranBoard{
+    flex:1;
+    border: 1px solid blue;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+}
+.ranBoard_1{
+    border: 1px solid green;
+}
+.ranBoard_1 > a > img {
+    width: 100%;
+    height: 100%;
+}
+
+/* #ranBoardImg1 {
+    width: 100%;
+    height: 100%;
+}
+#ranBoardImg2{
+    width: 100%;
+    height: 100%;
+}
+#ranBoardImg3{
+    width: 100%;
+    height: 100%;
+}
+#ranBoardImg4 {
+    width: 100%;
+    height: 100%;
+}
+#ranBoardImg5{
+    width: 100%;
+    height: 100%;
+}
+#ranBoardImg6{
+    width: 100%;
+    height: 100%;
+}
+#ranBoardImg7{
+    width: 100%;
+    height: 100%;
+}
+#ranBoardImg8{
+    width: 100%;
+    height: 100%;
+}
+#ranBoardImg9{
+    width: 100%;
+    height: 100%;
+}
+
+ */
+
