소셜로그인/일반로그인 구분, 로그인 했을때/안했을때 예약페이지,파이페이지 접근시 경고창띄우기

--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -253,16 +253,9 @@ footer span {
     width: 33%;
 }
 
-.slider:nth-child(1) {
-    z-index: 5;
-}
-.slider:nth-child(2) {
-    z-index: 4;
-
-}
-.slider:nth-child(3) {
-    z-index: 3;
-
+.submenu{
+    position: absolute;
+    z-index: 9999;
 }
 
 
