--- a/camp/src/main/webapp/resources/css/boardList-style4.css
+++ b/camp/src/main/webapp/resources/css/boardList-style4.css
@@ -1,10 +1,6 @@
-section, div, form{
+/* section, div, form{
     border : 1px solid black;
-}
-
-p, a{
-    font-weight: bold;
-}
+} */
 
 /* a태그 공통 설정 */
 .board-list a{
@@ -13,8 +9,7 @@ p, a{
 }
 
 .board-list a:hover{
-    /* text-decoration: underline; */
-    cursor: pointer;
+    text-decoration: underline;
 }
 
 /* 게시판 목록 화면 전체 영역 설정 */
@@ -34,33 +29,6 @@ p, a{
     width: 100%;
     min-height: 670px;
 }
-
-.list1{
-    display: flex;
-    width: 100%;
-    height: 300px;
-}
-
-.list1-1{
-    width: 30%;
-}
-
-.list1-2{
-    flex-direction: row;
-    width: 70%;
-}
-
-.list1-3{
-    
-    height: 30%;
-}
-
-.list1-4{
-    
-    height: 70%;
-}
-
-
 
 /* 목록 출력 테이블 */
 .list-table{
@@ -206,12 +174,10 @@ p, a{
 }
 
 .list-thumbnail{ /* 썸네일 이미지 */
-    /* max-width: 50px;
-    max-height: 30px; */
-    width: auto;
-    height: auto;
-    cursor: pointer;
-    /* position: absolute; */
+    max-width: 50px;
+    max-height: 30px;
+
+    position: absolute;
     left : -15px;
     top : 17px;
 }
