리뷰 조회 구현, 별점 불러오기 까지

--- a/camp/src/main/webapp/resources/css/detailList.css
+++ b/camp/src/main/webapp/resources/css/detailList.css
@@ -59,7 +59,7 @@ body {
 .div7 {
     border: 2px solid rgb(3, 92, 18);
     margin-top: 60px;
-    height: 60px;
+    min-height: 200px;
     display: flex;
     text-align: center;
     justify-content: center;
