--- a/camp/src/main/webapp/resources/css/review.css
+++ b/camp/src/main/webapp/resources/css/review.css
@@ -1,34 +1,38 @@
-/* 댓글 목록(ul) */
+* {
+    font-family: "Malgun Gothic";
+}
+
+/* 리뷰 목록(ul) */
 #reply-list{
     padding : 0;
     list-style: none;
 }
 
-/* 댓글 한 줄(댓글 하나) */
+/* 리뷰 한 줄(리뷰 하나) */
 .reply-row{
     padding: 15px 30px;
     border-top : 1px solid #ccc;
 }
 
-/* 댓글 목록 - 작성자 영역*/
+/* 리뷰 목록 - 작성자 영역*/
 .reply-writer{
     display: flex;
     align-items: center;
 }
 
-/* 댓글 작성자 프로필 이미지 */
+/* 리뷰 작성자 프로필 이미지 */
 .reply-writer > img{
     width: 40px;
     height: 40px;
 }
 
-/* 댓글 작성자 닉네임, 작성일 */
+/* 리뷰 작성자 닉네임, 작성일 */
 .reply-writer > span{
     font-weight: bold;
     margin-left: 10px;
 }
 
-/* 댓글 작성일 */
+/* 리뷰 작성일 */
 .reply-date{
     font-size : 0.8em;
     color : #aaa;
@@ -64,7 +68,7 @@
 
 
 
-/* 댓글 작성 영역 */
+/* 리뷰 작성 영역 */
 .reply-write-area{
     display: flex;
     justify-content: center;
@@ -72,51 +76,35 @@
     margin: 30px 0;
 }
 
-/* 댓글 작성 내용 */
+/* 리뷰 작성 내용 */
 #replyContent{
     flex-basis: 75%;
     margin-right: 10px;
     resize: none;
 }
 
-/* 댓글 등록 버튼 */
+/* 리뷰 등록 버튼 */
 #addReply{
-    flex-basis: 8%;
-    font-weight: bold;
-    background-color: #fff;
+    /* flex-basis: 15%; */
+    width: 50px;
     color: white;
+    background-color: #ccc;
     border: 0;
     cursor: pointer;
 }
 
 #addReply:hover{
-    background-color: white;
+    background-color: #aaa;
     color: #fff;
-    border: 2px solid #fff;
+    border: 2px solid #eee;
 }
 
-/* 댓글 수정 textarea */
+/* 리뷰 수정 textarea */
 .update-textarea{
     width: 100%;
     height: 90px;
     resize: none;
 }
-
-/* 답글 스타일 */
-.child-reply{
-    padding-left: 100px;
-    background-color: rgba(241, 50, 156, 0.2);
-}
-
-
-/* 답글 작성 textarea */
-.replyInsertContent{
-    width: 100%;
-    height: 90px;
-    resize: none;
-    margin-top: 20px;
-}
-
 
 /* 리뷰 작성창 */
 
@@ -128,11 +116,20 @@
 #campReview_form fieldset legend{
     text-align: right;
 }
+#campReview_form fieldset span{
+    font-weight: normal;
+}
+
+#campReview_form div {
+    display: flex;
+    margin: 5px;
+}
+
 #campReview_form input[type=radio]{
     display: none;
 }
 #campReview_form label{
-    font-size: 3em;
+    font-size: 1.5em;
     color: transparent;
     text-shadow: 0 0 0 #f0f0f0;
 }
@@ -152,6 +149,17 @@
     box-sizing: border-box;
     border: solid 1.5px #D3D3D3;
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 13px;
     resize: none;
+    margin-right: 5px;
+}
+
+.rate-in {
+    color: transparent;
+    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
+}
+
+.rate-out {
+    color: transparent;
+    text-shadow: 0 0 0 #f0f0f0;
 }
