--- a/camp/src/main/webapp/resources/css/review.css
+++ b/camp/src/main/webapp/resources/css/review.css
@@ -1,4 +1,4 @@
-* {
+*, p {
     font-family: "Malgun Gothic";
 }
 
@@ -49,13 +49,11 @@
     width: 50px;
     height: 30px;
     margin-left: 10px;
-
-    font-weight: bold;
     color: white;
-    background-color: #fff;
+    background-color: #aaa;
     border: 0;
     border-radius: 3px;
-
+    font-size: 14px;
     cursor: pointer;
 }
 
@@ -74,19 +72,14 @@
     justify-content: center;
     min-height: 85px;
     margin: 30px 0;
+    text-align: left;
 }
 
-/* 리뷰 작성 내용 */
-#replyContent{
-    flex-basis: 75%;
-    margin-right: 10px;
-    resize: none;
-}
 
 /* 리뷰 등록 버튼 */
 #addReply{
     /* flex-basis: 15%; */
-    width: 50px;
+    width: 100px;
     color: white;
     background-color: #ccc;
     border: 0;
@@ -110,6 +103,7 @@
 
 #campReview_form fieldset{
     display: inline-block;
+    justify-content: left;
     direction: rtl;
     border:0;
 }
@@ -118,6 +112,7 @@
 }
 #campReview_form fieldset span{
     font-weight: normal;
+    font-size: 22px;
 }
 
 #campReview_form div {
@@ -143,7 +138,7 @@
     text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
 }
 #reviewContents {
-    width: 100%;
+    width: 500px;
     height: 150px;
     padding: 10px;
     box-sizing: border-box;
