--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -5,8 +5,8 @@
 body {
     height: auto;
     margin: 0;
-   /*  background-image: url('../images/tentTest.jpg'); */
-  /*   background-size: 100% 100%; */
+/*     background-image: url('../images/test1.jpg'); 
+     background-size: 100% 100%;  */
 }
 
 header {
