--- a/camp/src/main/webapp/resources/css/reservation.css
+++ b/camp/src/main/webapp/resources/css/reservation.css
@@ -1,7 +1,16 @@
-body{ margin : 0; 
+
+
+body {
+    display: flex;
+    flex-direction: column;
+    /* font-size: 20px; */
+}
+
+main{ 
+    margin : 10px; 
     padding: 0;
     text-align: center;
-    font-size: 20px;
+    /* font-size: 20px; */
 }  
 /* 
 a{
