--- a/camp/src/main/webapp/resources/css/calendarStyle.css
+++ b/camp/src/main/webapp/resources/css/calendarStyle.css
@@ -9,9 +9,9 @@
 }
 body{
     min-height: 100vh;
-    display: flex;
+    /* display: flex; */
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     background-color: #e2e1dc;
 
 }
