--- a/camp/src/main/webapp/resources/css/reservation.css
+++ b/camp/src/main/webapp/resources/css/reservation.css
@@ -1,20 +1,32 @@
 
-
+ 
 body {
     display: flex;
     flex-direction: column;
-    /* font-size: 20px; */
+     font-size: 20px; 
 }
-
 main{ 
     margin : 10px; 
     padding: 0;
     text-align: center;
     /* font-size: 20px; */
 }  
+h4{
+    margin-top: 20px;
+}
+.logoutCss {
+    margin-top: 20px;
+    margin-bottom: 0;
+}
 /* 
 a{
     color: ;
+} */
+
+/* li{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 } */
 
 .formsize{
@@ -23,6 +35,7 @@ a{
     flex-direction: column;
     margin: 0;
     padding: 0;
+    z-index: 1;
 }
 
 .subject{
