--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -111,7 +111,7 @@ header .content1 {
 
 /*  -------------- body ---------------------  */
 main {
-    width: 1500px;
+    width: 100%;
 
     height: auto;
 
@@ -119,9 +119,10 @@ main {
 }
 
 .content2{
-    background-image: url('../images/test1.jpg'); 
+    background-image: url('../images/test1.jpg');
+    background-size: 100% 100%;
     width: 100%;
-    height: 700px;
+    height: 1000px;
     border: 1px solid black;
     
 }
