영진님꺼 pull, 메인 검색창 생성(기능X)

--- a/camp/src/main/webapp/resources/css/bootstrap1.css
+++ b/camp/src/main/webapp/resources/css/bootstrap1.css
@@ -286,14 +286,14 @@ sup {
     top: -.5em
 }
 
-a {
+/* a {
     color: rgb(0, 0, 0);
     
 } 
 
 a:hover {
     color: white
-}
+} */
 
 /*
 a:not([href]):not([class]),
